# TROS_PARKING

./: .gitignore  .h.swp  CMakeLists.txt  LICENSE  LICENSE-3RD-PARTY  LICENSE_ZH  README  README.md  build.sh  conanfile.py  h
architect/: README  (+1 more)
proto/fanya_proto/: CMakeLists.txt  README.md  build.sh  conanfile.py
proto/fanya_proto/fanya-protocol/: CMakeLists.txt
proto/fanya_proto/fanya-protocol/raw/fanya/: aph.proto  fanya_can.proto  fsm.proto  loc.proto  od.proto  psd.proto  rd.proto  s32g.proto  sen.proto
proto/fanya_proto/fanya-protocol/src/: aph.pb.cc  aph.pb.h  aph_idl_wrapper.h  can.pb.cc  can.pb.h  can_idl_wrapper.h  fanya_can.pb.cc  fanya_can.pb.h  fsm.pb.cc  fsm.pb.h  fsm_idl_wrapper.h  loc.pb.cc  loc.pb.h  loc_idl_wrapper.h  od.pb.cc  od.pb.h  psd.pb.h  psd_idl_wrapper.h  rd.pb.cc  rd.pb.h  s32g.pb.cc  s32g.pb.h  s32g_idl_wrapper.h  sen.pb.cc  sen.pb.h  sen_idl_wrapper.h
proto/fanya_proto/tools/: build-protocol.py  build.py
src/: CMakeLists.txt  apa_handle_module.cpp  apa_handle_module.h  location_map_module.cpp  location_map_module.h  parkingslot_detect_moudle.cpp
src/apa_handle/: CMakeLists.txt  apa_handle_module.cpp
src/common/: utils.cpp
src/freespace/: CMakeLists.txt  freespace_module.cpp  freespace_module.h
src/ipm_transformation/: CMakeLists.txt  ipm_tranformation_module.cpp
src/location_map/: CMakeLists.txt  CanTransModule.cpp  location_map_module.cpp
src/object_detect/: CMakeLists.txt  object_detect_moudle.cpp
src/parkingslot_detection/: CMakeLists.txt  CMakeLists_old.txt  parkingslot_detect_moudle.cpp  parkingslot_detect_moudle.h  parkingslot_detect_moudle_old.cpp  proto_msg_all.h
src/parkingslot_detection/dependencies/j5/communication/config/: hb_dds_qos_profiles.xml
src/parkingslot_detection/dependencies/j5/communication/include/communication/: communication_version.h  plugin_ctrl.h  service.h  subscriber.h  wait_set.h
src/parkingslot_detection/dependencies/j5/fmt/lib/pkgconfig/: fmt.pc
src/parkingslot_detection/dependencies/j5/hlog/include/hlog/: base_sink.h  fmt_printf.h  hobot_log.h  logging.h
src/parkingslot_detection/dependencies/j5/hlog/include/hlogc/: log_ctl.h  logging.h
src/parkingslot_detection/dependencies/j5/j5dvb_system/: conanfile.py
src/parkingslot_detection/dependencies/j5/j5dvb_system/include/: config_file_read.h  diag.h  dtc_to_file.h  gettext.h  hb_keymaster.h  hb_st_key_core.h  libhbpcie.h  zmq_diag_il.h
src/parkingslot_detection/dependencies/j5/j5dvb_system/include/cam/: cim.h  hb_cim.h  vin_log.h
src/parkingslot_detection/dependencies/j5/j5dvb_system/include/cjson/: cJSON.h
src/parkingslot_detection/dependencies/j5/j5dvb_system/include/isp/: hb_isp_internal.h
src/parkingslot_detection/dependencies/j5/j5dvb_system/include/libmm/: hb_media_codec.h
src/parkingslot_detection/dependencies/j5/j5dvb_system/include/openssl/: opensslconf-64.h
src/parkingslot_detection/dependencies/j5/j5dvb_system/include/vio/: cim_dma.h  hb_vin_data_info.h
src/parkingslot_detection/dependencies/j5/j5dvb_system/include/vio_tool/: common.h
src/parkingslot_detection/dependencies/j5/nlohmann_json/: conanfile.py
src/parkingslot_detection/dependencies/j5/protobuf/: conanfile.py
src/parkingslot_detection/dependencies/j5/rscl/include/avp_diag/: avp_diag.h
src/parkingslot_detection/dependencies/j5/rscl/include/common/: class_helper.hpp
src/parkingslot_detection/dependencies/j5/rscl/include/core/: MJson.hpp  common.h
src/parkingslot_detection/dependencies/j5/rscl/include/data_manager/: DataMgrCache.hpp
src/parkingslot_detection/dependencies/j5/rscl/include/data_type/: object_label.hpp
src/parkingslot_detection/dependencies/j5/rscl/include/rscl/: opflow.hpp  pipeline.hpp  pub_component.h
src/parkingslot_detection/dependencies/j5/rscl/include/swc_embed/: ad_log_helper.h  common.h  device_memory.h  image_subscriber.h  pubsub_base.h  pubsub_manager.h
src/parkingslot_detection/dependencies/j5/rscl/include/utils/: clipper.hpp
src/parkingslot_detection/protocol_msg/: hbmem_message_sample.h  psd.pb.cc  psd.pb.h  simple_image.pb.h
src/parkingslot_detection/test_error/ad_log/: ad_log.hpp  log_interface.hpp  log_manager.hpp  log_stream.hpp  profiler.hpp
src/parkingslot_detection/test_error/ad_log/adsfi_log/: logger.hpp
src/perception_od/: CMakeLists.txt  perception_od_moudle.cpp
src/perception_od/dependencies/j5/communication/: conanfile.py
src/perception_od/dependencies/j5/communication/config/: fastdds_qos_profiles_reference.xml
src/perception_od/dependencies/j5/fmt/: conanfile.py
src/perception_od/dependencies/j5/hlog/: conanfile.py
src/perception_od/dependencies/j5/hlog/lib/: libhlog.so.1.4.4
src/perception_od/dependencies/j5/j5dvb_system/include/: diag_lib.h  diag_service.h  diag_shm.h  hb_mem_err.h  hb_st_key_manager.h  hbmem.h  logger.h  logging.h  perflock.h  plat_cnn.h  rpmsg_lib.h  thermal.h
src/perception_od/dependencies/j5/j5dvb_system/lib/: liblkof.so.1
src/perception_od/dependencies/j5/message/: conanfile.py
src/perception_od/dependencies/j5/rscl/config/: bridge.yaml
src/perception_od/dependencies/j5/schedulegroup/lib/: libschedulegroup.so.1
src/perception_rd/: CMakeLists.txt  perception_rd_moudle.cpp
src/perception_rd/dependencies/j5/communication/config/: communication.json
src/perception_rd/dependencies/j5/j5dvb_system/include/: hb_cgroup.h  hb_mem_mgr.h  hbsec_crypto_api.h  ion.h  log.h  pcie-hobot.h  platform_hbm.h  wakelock.h
src/perception_rd/dependencies/j5/j5dvb_system/lib/: libcjson.so.1.6.0  libcnn_intf.so.1  libhbspihal.so.1
src/perception_rd/dependencies/j5/schedulegroup/: conanfile.py
src/perception_rd/protocol_msg/: simple_image.pb.cc  simple_image.proto
test/: CMakeLists.txt  build.sh  conanfile.py
test/cmake/: utils.cmake
test/pub_sub_example/: CMakeLists.txt  loc_subscriber_example.cpp  proto_msg_all.h  publisher_example.cpp  subscriber_example.cpp
test/scripts/: build.py  communication.json
test_kbd_s32g/pub_sub_example/: CMakeLists.txt  loc_publisher_example.cpp  loc_subscriber_example.cpp  proto_msg_all.h  publisher_example.cpp
(+390 files in other folders)
